Use classpath for resource loading exclusively to reduce complexity